--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Peasants -- Ireland -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: My Lady of the Chimney Corner
 url: http://www.gutenberg.org/ebooks/31765
